tests/error/match_arm_missing_comma_scalar.vow
// TEST: error-code UnexpectedToken
// TEST: stderr "UnexpectedToken"
module MatchArmMissingCommaScalar

enum E {
    A,
    B,
}

fn f(e: E) -> i64 {
    match e {
        E::A => 5
        E::B => 9
    }
}

fn main() -> i32 {
    let _a: i64 = f(E::A);
    let _b: i64 = f(E::B);
    0
}
